--- a/application.properties
+++ b/application.properties
@@ -19,3 +19,5 @@ spring.rabbitmq.addresses=amqps://tkijkvvi:fAYLmOCuRuGa4JVxCcXC5LcOTAyLlDHb@lion
 #Eureka Server
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+
+management.endpoints.web.exposure.include=*
